fix: gap of task-cards

--- a/src/app/pages/board/task-card/task-card.scss
+++ b/src/app/pages/board/task-card/task-card.scss
@@ -9,7 +9,7 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
   justify-content: space-between;
   height: 18rem;
   max-height: 18rem;
